--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=4000
-DB_CNN=mongodb+srv://elchisi:ezequiel55@first-cluster.e0v8mla.mongodb.net/CalendarApp
+DB_CNN=mongodb+srv://elchisi:{password}@first-cluster.e0v8mla.mongodb.net/CalendarApp
 SECRET_JWT_SEED=Esto-Es-UnA-PalaBads123,secreta 13io2lmdasdio233altoseed
